# apytti

./: .gitignore  API.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build-dmg.sh  build-pkg.sh  build.rs  deploy-staging.sh  sign.sh
.cargo/: config.toml
.gitea/workflows/: ci.yaml  release.yaml
.github/: SECRETS.md
.github/workflows/: release.yaml
bundle/: Info.plist.template
bundle/scripts/: postinstall
inbox/: grytti-bootstrap.md  hermytt-attachments-from-bridge.md
scripts/: runner-setup.sh
src/: attachments.rs  config.rs  config_ui.html  customizations.rs  error.rs  handler.rs  help.html  install.rs  lib.rs  macos_menu.rs  main.rs  models.rs  persist.rs  registry.rs  schema.rs  server.rs  sessions.rs  setup.rs  stream.rs
src/backend/: claude.rs  copilot.rs  gemini.rs  mod.rs  ollama.rs
tests/: integration.rs
