[package]
name = "apytti"
version = "0.6.8"
edition = "2024"
description = "Multi-backend REST gateway for AI CLIs (Claude, Copilot, Gemini, Ollama)"
license = "MIT"
homepage = "https://github.com/yttfam/apytti"
repository = "https://github.com/yttfam/apytti.git"
authors = ["Nico Bousquet <com@calii.net>"]

[lib]
name = "apytti"
path = "src/lib.rs"

[[bin]]
name = "apytti"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
dialoguer = { version = "0.11", default-features = false }
dirs = "5"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
async-trait = "0.1"
futures-util = "0.3"
async-stream = "0.3"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSThread"] }
objc2-app-kit = { version = "0.2", features = [
    "NSApplication", "NSMenu", "NSMenuItem", "NSStatusBar", "NSStatusItem",
    "NSResponder", "NSRunningApplication",
] }

[dev-dependencies]
tempfile = "3"

# ---- Linux packaging metadata ------------------------------------------------
# Consumed by `cargo-deb` and `cargo-generate-rpm` in the release pipeline.
# Both tools just package files — no Linux host required to produce the
# artifacts; the release workflow runs from macOS-arm64 runners after the
# musl statics have been cross-compiled.
[package.metadata.deb]
maintainer = "Nico Bousquet <com@calii.net>"
copyright = "2026, Nico Bousquet"
license-file = ["LICENSE", "0"]
extended-description = """\
Apytti is a stateless HTTP gateway in front of headless AI CLIs. It exposes \
a unified REST + SSE API so any client can target Claude, Copilot, Gemini, \
or Ollama through one endpoint with normalized event streams, attachments, \
session lifecycle, and cancel."""
section = "utils"
priority = "optional"
# `assets` is overridden at invocation time by the release workflow because the
# binary path differs per target triple (target/<triple>/release/apytti for
# cross-builds vs target/release/apytti for the host build).
assets = [
    ["target/release/apytti", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/apytti/README.md", "644"],
]

[package.metadata.generate-rpm]
license = "MIT"
summary = "Multi-backend REST gateway for AI CLIs (Claude, Copilot, Gemini, Ollama)"
assets = [
    { source = "target/release/apytti", dest = "/usr/bin/apytti", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/apytti/README.md", mode = "644", doc = true },
]
